[package]
name = "per-thread-object"
version = "0.4.3"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT"
description = "Efficient per-object thread-local storage implementation"
repository = "https://github.com/quininer/per-thread-object"
homepage = "https://github.com/quininer/per-thread-object"
documentation = "https://docs.rs/per-thread-object"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.11", optional = true }
loom = { version = "0.3", optional = true }
cache-padded = "1"
once_cell = "1"

[dev-dependencies]
criterion = "0.3"
thread_local = "1"
os-thread-local = "0.1"
thread-local-object = "0.1"
rayon = "1"

[[bench]]
name = "tls"
harness = false
