[package]
name = "per-thread-object"
version = "0.6.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT"
description = "Efficient per-object thread-local storage implementation"
repository = "https://github.com/quininer/per-thread-object"
homepage = "https://github.com/quininer/per-thread-object"
documentation = "https://docs.rs/per-thread-object"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.8"

# No work.
# because global static and thread local support for loom is not yet complete.
loom = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
thread_local = "1"
os-thread-local = "0.1"
rayon = "1"

[[bench]]
name = "tls"
harness = false
